--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -1,5 +1,5 @@
 
-name: Continuous Integration
+name: Continuous Integration with Docker
 
 
 on:
@@ -14,11 +14,26 @@ jobs:
     runs-on: ubuntu-latest
 
     steps: 
-      - uses: actions/checkout@v3
+      - 
+        name: Checkout
+        uses: actions/checkout@v3
 
-      - name: greeting
-        run: echo hello world!
-
-      - name: done
-        run: | 
-          echo done!
+      - 
+        name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_HUB_BABASCIENCE }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+      
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      
+      -
+        name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKER_HUB_BABASCIENCE }}/CICD:latest
