--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -36,4 +36,4 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_HUB_BABASCIENCE }}/CICD:latest
+          tags: ${{ secrets.DOCKER_HUB_BABASCIENCE }}/cicd:latest
