--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -34,6 +34,6 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          file: ./app.dockerfile
+          file: ./app.Dockerfile
           push: true
           tags: ${{ secrets.DOCKER_HUB_BABASCIENCE }}/cicd:latest
