--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -21,4 +21,11 @@ jobs:
       -
         name: done
         run: echo done
+
+      -
+        name: Install cosign
+        if: github.event_name != 'pull_request'
+        uses: sigstore/cosign-installer@7e0881f8fe90b25e305bbf0309761e9314607e25
+        with:
+          cosign-release: 'v1.9.0'
         
