--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -33,5 +33,7 @@ jobs:
         name: Setup Docker buildx
         uses: docker/setup-buildx-action@79abd3f86f79a9d68a23c75a09a9a85889262adf
 
-
+      -
+        name: Build the stack
+        run: docker-compose up -d 
         
