--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -36,4 +36,12 @@ jobs:
       -
         name: Build the stack
         run: docker-compose up -d 
+
+      - 
+        name: Test
+        run: docker-compose run app python manage.py test
+
+      - 
+        name: Done
+        run: echo DONE!
         
